all subpage without the actual subpage

--- a/Burgermenu.css
+++ b/Burgermenu.css
@@ -38,7 +38,7 @@
     margin-bottom: 5px;
     position: relative;
 
-    background: #cdcdcd;
+    background: #0E185C;
     border-radius: 3px;
 
     z-index: 1;
@@ -65,7 +65,7 @@
 #menuToggle input:checked ~ span {
     opacity: 1;
     transform: rotate(45deg) translate(-2px, -1px);
-    background: #232323;
+    background: ##0E185C;
 }
 
 /*
